Add FactoryMethod, Adapter

--- a/Prototype/Prototype.csproj
+++ b/Prototype/Prototype.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6BCDCDC2-13B4-4B14-A4A0-3AE3F127EE02}</ProjectGuid>
+    <ProjectGuid>{36992C22-592D-4529-83B3-7F335784897C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FactoryModelCalculator</RootNamespace>
-    <AssemblyName>FactoryModelCalculator</AssemblyName>
+    <RootNamespace>Prototype</RootNamespace>
+    <AssemblyName>Prototype</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Prototype.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
